# recipe-collectors

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  scraper-async-mp.py  scraper-async.py  scraper-mp.py  scraper-sync.py  scraper.py
app/core/: celerytest.py  models.py  run_task.py  tasks.py  test.py
app/core/migrations/: 0001_initial.py  0002_auto_20230126_0605.py
app/recipe/: models.py  pagination.py  parser.py  run_task.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
app/recipe/tests/: test_recipe_api.py
app/recipecollector/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/user/: models.py  serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
test_scraper/: scraper-async-mp.py  scraper-async.py  scraper-mp.py  scraper-sync.py  scraper.py
