[tool.poetry]
name = "recipe-collectors"
version = "0.1.0"
description = ""
authors = ["omognuni <melbong0069@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.0,<5.0"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
celery = "^5.3.6"
beautifulsoup4 = "^4.12.3"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
